added batch selector for same length captions

--- a/Model Training.ipynb
+++ b/Model Training.ipynb
@@ -34,7 +34,7 @@
     "from models import Encoder, Decoder\n",
     "\n",
     "from pathlib import Path\n",
-    "from DatasetInterface import MSCOCOInterface\n",
+    "from DatasetInterface import MSCOCOInterface, get_loader\n",
     "from data_prep_utils import *\n",
     "from utils import train, save_model, load_model, plot_loss\n",
     "import json\n",
@@ -72,35 +72,8 @@
    "execution_count": 2,
    "id": "2472cfa6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "train dataset has 15000 images\n",
-      " val dataset has 3000 images\n",
-      " test dataset has 938 images\n",
-      "There are 591753 captions in the data set\n",
-      "With FREQ_THRESHOLD = 2, vocab size is 16232\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#########\n",
-    "# paths for Khalil\n",
-    "#########\n",
-    "# root = Path('Data')\n",
-    "\n",
-    "#captions_path = root/'annotations'/'captions_train2017.json'\n",
-    "\n",
-    "# train_captions_path = root/'annotations_trainval2017'/'annotations'/'custom_captions_train.json'\n",
-    "# val_captions_path = root/'annotations_trainval2017'/'annotations'/'custom_captions_val.json'\n",
-    "# test_captions_path = root/'annotations_trainval2017'/'annotations'/'custom_captions_test.json'\n",
-    "\n",
-    "#########\n",
-    "# paths for Alex\n",
-    "#########\n",
-    "\n",
     "root = Path('Datasets/coco')\n",
     "imgs_path = root/'images'/'train2017'\n",
     "imgs_path_test = root/'images'/'val2017'\n",
@@ -116,19 +89,7 @@
     "train_captions_path = root/'annotations'/'custom_captions_train.json'\n",
     "val_captions_path = root/'annotations'/'custom_captions_val.json'\n",
     "test_captions_path = root/'annotations'/'custom_captions_test.json'\n",
-    "\n",
-    "\n",
-    "\n",
-    "# load vocab\n",
-    "with open('vocabulary/idx_to_string.json') as json_file:\n",
-    "    idx_to_string_json = json.load(json_file)\n",
-    "        \n",
-    "idx_to_string = dict()\n",
-    "for key in idx_to_string_json:\n",
-    "    idx_to_string[int(key)] = idx_to_string_json[key]\n",
-    "    \n",
-    "with open('vocabulary/string_to_index.json') as json_file:\n",
-    "    string_to_index = json.load(json_file)\n"
+    "\n"
    ]
   },
   {
@@ -145,42 +106,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "8143132d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'Datasets/coco/annotations/custom_captions_train.json'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [5]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     21\u001b[0m test_interface_params \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m     22\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mimgs_path\u001b[39m\u001b[38;5;124m'\u001b[39m: imgs_path_test,\n\u001b[1;32m     23\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcaptions_path\u001b[39m\u001b[38;5;124m'\u001b[39m: test_captions_path,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     28\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvocab_from_file\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m     29\u001b[0m }\n\u001b[1;32m     31\u001b[0m \u001b[38;5;66;03m# Training Interface\u001b[39;00m\n\u001b[0;32m---> 32\u001b[0m coco_interface_train \u001b[38;5;241m=\u001b[39m \u001b[43mMSCOCOInterface\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mtrain_interface_params\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     34\u001b[0m \u001b[38;5;66;03m# Validation Interface\u001b[39;00m\n\u001b[1;32m     35\u001b[0m coco_interface_val \u001b[38;5;241m=\u001b[39m MSCOCOInterface(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mval_interface_params)\n",
+      "File \u001b[0;32m~/INM706-image-captioning/DatasetInterface.py:91\u001b[0m, in \u001b[0;36mMSCOCOInterface.__init__\u001b[0;34m(self, imgs_path, captions_path, freq_threshold, caps_per_img, vocab_from_file)\u001b[0m\n\u001b[1;32m     88\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcaps_per_img \u001b[38;5;241m=\u001b[39m caps_per_img\n\u001b[1;32m     90\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrng \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mdefault_rng(\u001b[38;5;241m42\u001b[39m)\n\u001b[0;32m---> 91\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcoco \u001b[38;5;241m=\u001b[39m \u001b[43mCOCO\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mimgs_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcaptions_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     93\u001b[0m \u001b[38;5;66;03m# create vocab from scratch if it is not already done\u001b[39;00m\n\u001b[1;32m     94\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m vocab_from_file:\n",
+      "File \u001b[0;32m~/INM706-image-captioning/MSCOCO.py:24\u001b[0m, in \u001b[0;36mCOCO.__init__\u001b[0;34m(self, imgs_path, captions_path)\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcaptions_path \u001b[38;5;241m=\u001b[39m captions_path\n\u001b[1;32m     23\u001b[0m \u001b[38;5;66;03m# load captions json file and put json['captions'] and json['images'] into attributes:\u001b[39;00m\n\u001b[0;32m---> 24\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcaptions, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcaption_images \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_load_captions\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     26\u001b[0m \u001b[38;5;66;03m# use images from caption file to define the list of images used in data set\u001b[39;00m\n\u001b[1;32m     27\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mimgs \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_get_imgs(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcaption_images)\n",
+      "File \u001b[0;32m~/INM706-image-captioning/MSCOCO.py:35\u001b[0m, in \u001b[0;36mCOCO._load_captions\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_load_captions\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mlist\u001b[39m:\n\u001b[1;32m     34\u001b[0m     \u001b[38;5;66;03m# Opening JSON file\u001b[39;00m\n\u001b[0;32m---> 35\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcaptions_path\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m captions_json:\n\u001b[1;32m     36\u001b[0m         \u001b[38;5;66;03m# returns JSON object as\u001b[39;00m\n\u001b[1;32m     37\u001b[0m         \u001b[38;5;66;03m# a dictionary\u001b[39;00m\n\u001b[1;32m     38\u001b[0m         data \u001b[38;5;241m=\u001b[39m json\u001b[38;5;241m.\u001b[39mload(captions_json)\n\u001b[1;32m     39\u001b[0m     annotations \u001b[38;5;241m=\u001b[39m data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mannotations\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'Datasets/coco/annotations/custom_captions_train.json'"
+     ]
+    }
+   ],
    "source": [
     "train_interface_params = {\n",
     "    'imgs_path': imgs_path,\n",
     "    'captions_path': train_captions_path,\n",
     "    'freq_threshold': 5,\n",
-    "    'sequence_length': 20,\n",
-    "    'caps_per_img': 3,\n",
-    "    'stage': \"train\",\n",
-    "    'idx_to_string': idx_to_string,\n",
-    "    'string_to_index': string_to_index,\n",
+    "    # 'sequence_length': 20,\n",
+    "    'caps_per_img': 5,\n",
+    "    # 'stage': \"train\",\n",
+    "    'vocab_from_file': True\n",
     "}\n",
     "\n",
     "val_interface_params = {\n",
     "    'imgs_path': imgs_path,\n",
     "    'captions_path': val_captions_path,\n",
     "    'freq_threshold': 5,\n",
-    "    'sequence_length': 20,\n",
-    "    'caps_per_img': 3,\n",
-    "    'stage': \"validation\",\n",
-    "    'idx_to_string': idx_to_string,\n",
-    "    'string_to_index': string_to_index,\n",
+    "    # 'sequence_length': 20,\n",
+    "    'caps_per_img': 1,\n",
+    "    # 'stage': \"validation\",\n",
+    "    'vocab_from_file': True\n",
     "}\n",
     "\n",
     "test_interface_params = {\n",
     "    'imgs_path': imgs_path_test,\n",
     "    'captions_path': test_captions_path,\n",
     "    'freq_threshold': 5,\n",
-    "    'sequence_length': 20,\n",
-    "    'caps_per_img': 3,\n",
-    "    'stage': \"test\",\n",
-    "    'idx_to_string': idx_to_string,\n",
-    "    'string_to_index': string_to_index,\n",
+    "    # 'sequence_length': 20,\n",
+    "    'caps_per_img': 1,\n",
+    "    # 'stage': \"test\",\n",
+    "    'vocab_from_file': True\n",
     "}\n",
     "\n",
     "# Training Interface\n",
@@ -192,34 +165,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "f38c73a0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Lenght of training image: 45000, Lenght of Validation image: 9000 Lenght of Testing image: 2814\n",
-      "Lenght of vocabulary: 16232\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(\"Length of training image: {}, Length of Validation image: {}\"\\\n",
+    "print(\"training captions: {}\\nValidation captions: {}\"\n",
     "      .format(len(coco_interface_train), len(coco_interface_val)))\n",
     "\n",
-    "print(f\"Length of vocabulary: {len(coco_interface_train.idx_to_string)}\")"
+    "# print(f\"Length of vocabulary: {len(coco_interface_train.idx_to_string)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "8237cb08",
    "metadata": {},
    "outputs": [],
    "source": [
     "batch_size = 32\n",
+    "train_loader = \n",
     "train_loader = data.DataLoader(coco_interface_train, batch_size=batch_size, shuffle=True)\n",
     "val_loader = data.DataLoader(coco_interface_val, batch_size=batch_size, shuffle=False)"
    ]
