--- a/Model Training.ipynb
+++ b/Model Training.ipynb
@@ -70,28 +70,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2472cfa6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "train dataset has 15000 images\n",
-      " val dataset has 3000 images\n",
-      " test dataset has 938 images\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "root = Path('Datasets/coco')\n",
     "imgs_path = root/'images'/'train2017'\n",
     "imgs_path_test = root/'images'/'val2017'\n",
     "\n",
     "\n",
-    "prepare_datasets(train_percent = 0.87, super_categories=['sports'],\n",
-    "                    max_train=15000, max_val=3000, max_test=3000)\n",
+    "prepare_datasets(train_percent = 0.87, super_categories=None,\n",
+    "                 max_train=15000, max_val=3000, max_test=3000)\n",
     "\n",
     "#### build vocab using full original coco train. Uncomment to run\n",
     "# build_vocab(freq_threshold=2, sequence_length=40,\n",
@@ -105,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "ab72e6eb",
    "metadata": {},
    "outputs": [],
@@ -117,47 +107,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "8143132d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "####################\n",
-      "Vocab size is 16232\n",
-      "####################\n",
-      "\n",
-      "Obtaining caption lengths...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 75000/75000 [00:07<00:00, 10116.06it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "####################\n",
-      "Vocab size is 16232\n",
-      "####################\n",
-      "\n",
-      "Obtaining caption lengths...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 3000/3000 [00:00<00:00, 9982.21it/s] \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_interface_params = {\n",
     "    'imgs_path': imgs_path,\n",
