changed id to i in train() to avoid overwriting built in, added variables to train_params in train_model

--- a/code/train_model.ipynb
+++ b/code/train_model.ipynb
@@ -91,7 +91,10 @@
     "OPT_PARAMS = {'lr':1e-3, 'weight_decay':1e-3, 'betas':(0.9, 0.999), 'eps':1e-08}\n",
     "\n",
     "# checkpoint file\n",
-    "CHECKPOINT = './model/image_captioning_model_v9.pth'"
+    "CHECKPOINT = './model/image_captioning_model_v9.pth'\n",
+    "PRINT_EVERY = 100 # run print_every batches and then\n",
+    "# print running results. For bigger batch size make this \n",
+    "# number smaller if you want to see r"
    ]
   },
   {
@@ -248,7 +251,9 @@
     "if Path(CHECKPOINT).exists():\n",
     "    encoder, decoder, training_loss, validation_loss = load_model(encoder, decoder, CHECKPOINT)\n",
     "else:\n",
-    "    print(f'{CHECKPOINT} file does not exist, training startging from scratch')"
+    "    print(f'{CHECKPOINT} file does not exist, training startging from scratch')\n",
+    "    training_loss = None\n",
+    "    validation_loss = None"
    ]
   },
   {
@@ -269,7 +274,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Step: [0/2344] || Average Training Loss: 9.2375\n"
+      "Step: [0/2344] || Average Training Loss: 9.2375\n",
+      "Step: [1000/2344] || Average Training Loss: 3.0166\n"
      ]
     }
    ],
@@ -283,7 +289,10 @@
     "    'train_loader': train_dl,\n",
     "    'val_loader': val_dl,\n",
     "    'total_epoch': 2,\n",
-    "    'checkpoint_path': CHECKPOINT\n",
+    "    'training_loss': training_loss,\n",
+    "    'validation_loss': validation_loss,\n",
+    "    'checkpoint_path': CHECKPOINT,\n",
+    "    'print_every': PRINT_EVERY\n",
     "}\n",
     "\n",
     "training_loss, validation_loss = train(**train_params) "
