prettier printing for progress

--- a/code/train_model.ipynb
+++ b/code/train_model.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "e1c984c7-0355-4b17-a4ee-293902fb181a",
    "metadata": {},
    "outputs": [],
@@ -91,10 +91,10 @@
     "OPT_PARAMS = {'lr':1e-3, 'weight_decay':1e-3, 'betas':(0.9, 0.999), 'eps':1e-08}\n",
     "\n",
     "# checkpoint file\n",
-    "CHECKPOINT = './model/image_captioning_model_v9.pth'\n",
-    "PRINT_EVERY = 100 # run print_every batches and then\n",
+    "CHECKPOINT = '../model/image_captioning_model_v9.pth'\n",
+    "PRINT_EVERY = 300 # run print_every batches and then\n",
     "# print running results. For bigger batch size make this \n",
-    "# number smaller if you want to see r"
+    "# number smaller if you want to see regular output"
    ]
   },
   {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "6d1b68b6-e95a-45d7-97d1-df98d456535d",
    "metadata": {},
    "outputs": [],
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "644a4dc6-0e99-4b86-b2bf-2d376f2f09e7",
    "metadata": {},
    "outputs": [],
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "1f8baa40-b22f-4c9d-a445-c311eb3c190b",
    "metadata": {},
    "outputs": [],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "b7e8a532-f6f7-42ff-840f-c5655e79c874",
    "metadata": {},
    "outputs": [],
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "d48931ad-e9a8-4572-af11-0463772d6270",
    "metadata": {},
    "outputs": [],
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "d42d3799-d7cf-4356-b74b-872123d114a5",
    "metadata": {},
    "outputs": [
@@ -243,7 +243,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "./model/image_captioning_model_v9.pth file does not exist, training startging from scratch\n"
+      "../model/image_captioning_model_v9.pth file does not exist, training startging from scratch\n"
      ]
     }
    ],
@@ -274,8 +274,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Step: [0/2344] || Average Training Loss: 9.2375\n",
-      "Step: [1000/2344] || Average Training Loss: 3.0166\n"
+      "Step: [0/2344] || Average Training Loss: 9.2219\n",
+      "Step: [300/2344] || Average Training Loss: 3.5137\n",
+      "Step: [600/2344] || Average Training Loss: 3.1954\n",
+      "Step: [900/2344] || Average Training Loss: 3.0607\n",
+      "Step: [1200/2344] || Average Training Loss: 2.9739\n",
+      "Step: [1500/2344] || Average Training Loss: 2.9194\n",
+      "Step: [1800/2344] || Average Training Loss: 2.8806\n",
+      "Step: [2100/2344] || Average Training Loss: 2.8516\n",
+      "Step: [0/94] || Average Validation Loss: 2.3893\n",
+      "######################################################################\n",
+      "Epoch: [0/2] || Training Loss = 2.83 || Training Perplexity: 17.01 || Validation Loss: 2.53 || Validation Perplexity: 12.57|| Time: 12.572743\n",
+      "######################################################################\n",
+      "Step: [0/2344] || Average Training Loss: 2.7461\n",
+      "Step: [300/2344] || Average Training Loss: 2.6607\n"
      ]
     }
    ],
