--- a/code/train_model.ipynb
+++ b/code/train_model.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "e1c984c7-0355-4b17-a4ee-293902fb181a",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,8 @@
     "# optimiser parameters\n",
     "OPT_PARAMS = {'lr':1e-3, 'weight_decay':1e-3, 'betas':(0.9, 0.999), 'eps':1e-08}\n",
     "\n",
-    "# checkpoint file\n",
+    "# training parameters\n",
+    "TOTAL_EPOCH = 15\n",
     "CHECKPOINT = '../model/image_captioning_model_v9.pth'\n",
     "PRINT_EVERY = 300 # run print_every batches and then\n",
     "# print running results. For bigger batch size make this \n",
@@ -107,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "6d1b68b6-e95a-45d7-97d1-df98d456535d",
    "metadata": {},
    "outputs": [],
@@ -133,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "id": "644a4dc6-0e99-4b86-b2bf-2d376f2f09e7",
    "metadata": {},
    "outputs": [],
@@ -145,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "id": "1f8baa40-b22f-4c9d-a445-c311eb3c190b",
    "metadata": {},
    "outputs": [],
@@ -190,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "id": "b7e8a532-f6f7-42ff-840f-c5655e79c874",
    "metadata": {},
    "outputs": [],
@@ -209,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "id": "d48931ad-e9a8-4572-af11-0463772d6270",
    "metadata": {},
    "outputs": [],
@@ -235,18 +236,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "id": "d42d3799-d7cf-4356-b74b-872123d114a5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "../model/image_captioning_model_v9.pth file does not exist, training startging from scratch\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if Path(CHECKPOINT).exists():\n",
     "    encoder, decoder, training_loss, validation_loss = load_model(encoder, decoder, CHECKPOINT)\n",
@@ -274,20 +267,93 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Step: [0/2344] || Average Training Loss: 9.2219\n",
-      "Step: [300/2344] || Average Training Loss: 3.5137\n",
-      "Step: [600/2344] || Average Training Loss: 3.1954\n",
-      "Step: [900/2344] || Average Training Loss: 3.0607\n",
-      "Step: [1200/2344] || Average Training Loss: 2.9739\n",
-      "Step: [1500/2344] || Average Training Loss: 2.9194\n",
-      "Step: [1800/2344] || Average Training Loss: 2.8806\n",
-      "Step: [2100/2344] || Average Training Loss: 2.8516\n",
-      "Step: [0/94] || Average Validation Loss: 2.3893\n",
+      "Step: [0/2344] || Average Training Loss: 2.9743\n",
+      "Step: [300/2344] || Average Training Loss: 2.7166\n",
+      "Step: [600/2344] || Average Training Loss: 2.6994\n",
+      "Step: [900/2344] || Average Training Loss: 2.6813\n",
+      "Step: [1200/2344] || Average Training Loss: 2.6757\n",
+      "Step: [1500/2344] || Average Training Loss: 2.6719\n",
+      "Step: [1800/2344] || Average Training Loss: 2.6694\n",
+      "Step: [2100/2344] || Average Training Loss: 2.6685\n",
+      "Step: [0/94] || Average Validation Loss: 2.6069\n",
       "######################################################################\n",
-      "Epoch: [0/2] || Training Loss = 2.83 || Training Perplexity: 17.01 || Validation Loss: 2.53 || Validation Perplexity: 12.57|| Time: 12.572743\n",
+      "Epoch: [0/15] || Training Loss = 2.66 || Training Perplexity: 14.36 || Validation Loss: 2.49 || Validation Perplexity: 12.04|| Time: 12.039838\n",
       "######################################################################\n",
-      "Step: [0/2344] || Average Training Loss: 2.7461\n",
-      "Step: [300/2344] || Average Training Loss: 2.6607\n"
+      "Step: [0/2344] || Average Training Loss: 2.3694\n",
+      "Step: [300/2344] || Average Training Loss: 2.6512\n",
+      "Step: [600/2344] || Average Training Loss: 2.6415\n",
+      "Step: [900/2344] || Average Training Loss: 2.6379\n",
+      "Step: [1200/2344] || Average Training Loss: 2.6430\n",
+      "Step: [1500/2344] || Average Training Loss: 2.6421\n",
+      "Step: [1800/2344] || Average Training Loss: 2.6415\n",
+      "Step: [2100/2344] || Average Training Loss: 2.6410\n",
+      "Step: [0/94] || Average Validation Loss: 2.1527\n",
+      "######################################################################\n",
+      "Epoch: [1/15] || Training Loss = 2.64 || Training Perplexity: 13.99 || Validation Loss: 2.49 || Validation Perplexity: 12.01|| Time: 12.011737\n",
+      "######################################################################\n",
+      "Step: [0/2344] || Average Training Loss: 2.5006\n",
+      "Step: [300/2344] || Average Training Loss: 2.6367\n",
+      "Step: [600/2344] || Average Training Loss: 2.6391\n",
+      "Step: [900/2344] || Average Training Loss: 2.6354\n",
+      "Step: [1200/2344] || Average Training Loss: 2.6351\n",
+      "Step: [1500/2344] || Average Training Loss: 2.6346\n",
+      "Step: [1800/2344] || Average Training Loss: 2.6330\n",
+      "Step: [2100/2344] || Average Training Loss: 2.6297\n",
+      "Step: [0/94] || Average Validation Loss: 2.4109\n",
+      "######################################################################\n",
+      "Epoch: [2/15] || Training Loss = 2.63 || Training Perplexity: 13.92 || Validation Loss: 2.50 || Validation Perplexity: 12.20|| Time: 12.201837\n",
+      "######################################################################\n",
+      "Step: [0/2344] || Average Training Loss: 2.7833\n",
+      "Step: [300/2344] || Average Training Loss: 2.6084\n",
+      "Step: [600/2344] || Average Training Loss: 2.6128\n",
+      "Step: [900/2344] || Average Training Loss: 2.6185\n",
+      "Step: [1200/2344] || Average Training Loss: 2.6230\n",
+      "Step: [1500/2344] || Average Training Loss: 2.6233\n",
+      "Step: [1800/2344] || Average Training Loss: 2.6225\n",
+      "Step: [2100/2344] || Average Training Loss: 2.6229\n",
+      "Step: [0/94] || Average Validation Loss: 2.2965\n",
+      "######################################################################\n",
+      "Epoch: [3/15] || Training Loss = 2.62 || Training Perplexity: 13.79 || Validation Loss: 2.48 || Validation Perplexity: 11.95|| Time: 11.949195\n",
+      "######################################################################\n",
+      "Step: [0/2344] || Average Training Loss: 2.7292\n",
+      "Step: [300/2344] || Average Training Loss: 2.6036\n",
+      "Step: [600/2344] || Average Training Loss: 2.6089\n",
+      "Step: [900/2344] || Average Training Loss: 2.6115\n",
+      "Step: [1200/2344] || Average Training Loss: 2.6137\n",
+      "Step: [1500/2344] || Average Training Loss: 2.6168\n",
+      "Step: [1800/2344] || Average Training Loss: 2.6156\n",
+      "Step: [2100/2344] || Average Training Loss: 2.6164\n",
+      "Step: [0/94] || Average Validation Loss: 2.4784\n",
+      "######################################################################\n",
+      "Epoch: [4/15] || Training Loss = 2.62 || Training Perplexity: 13.71 || Validation Loss: 2.47 || Validation Perplexity: 11.84|| Time: 11.835285\n",
+      "######################################################################\n",
+      "Step: [0/2344] || Average Training Loss: 2.4823\n",
+      "Step: [300/2344] || Average Training Loss: 2.6014\n",
+      "Step: [600/2344] || Average Training Loss: 2.6089\n",
+      "Step: [900/2344] || Average Training Loss: 2.6098\n",
+      "Step: [1200/2344] || Average Training Loss: 2.6142\n",
+      "Step: [1500/2344] || Average Training Loss: 2.6144\n",
+      "Step: [1800/2344] || Average Training Loss: 2.6158\n",
+      "Step: [2100/2344] || Average Training Loss: 2.6163\n",
+      "Step: [0/94] || Average Validation Loss: 2.5006\n",
+      "######################################################################\n",
+      "Epoch: [5/15] || Training Loss = 2.62 || Training Perplexity: 13.67 || Validation Loss: 2.48 || Validation Perplexity: 11.93|| Time: 11.931040\n",
+      "######################################################################\n",
+      "Step: [0/2344] || Average Training Loss: 2.4346\n",
+      "Step: [300/2344] || Average Training Loss: 2.6066\n",
+      "Step: [600/2344] || Average Training Loss: 2.6081\n",
+      "Step: [900/2344] || Average Training Loss: 2.6106\n",
+      "Step: [1200/2344] || Average Training Loss: 2.6125\n",
+      "Step: [1500/2344] || Average Training Loss: 2.6109\n",
+      "Step: [1800/2344] || Average Training Loss: 2.6111\n",
+      "Step: [2100/2344] || Average Training Loss: 2.6126\n",
+      "Step: [0/94] || Average Validation Loss: 2.3292\n",
+      "######################################################################\n",
+      "Epoch: [6/15] || Training Loss = 2.61 || Training Perplexity: 13.63 || Validation Loss: 2.48 || Validation Perplexity: 11.94|| Time: 11.944505\n",
+      "######################################################################\n",
+      "Step: [0/2344] || Average Training Loss: 2.2475\n",
+      "Step: [300/2344] || Average Training Loss: 2.5933\n",
+      "Step: [600/2344] || Average Training Loss: 2.5972\n"
      ]
     }
    ],
@@ -300,7 +366,7 @@
     "    'optimizer': optimizer,\n",
     "    'train_loader': train_dl,\n",
     "    'val_loader': val_dl,\n",
-    "    'total_epoch': 2,\n",
+    "    'total_epoch': TOTAL_EPOCH,\n",
     "    'training_loss': training_loss,\n",
     "    'validation_loss': validation_loss,\n",
     "    'checkpoint_path': CHECKPOINT,\n",
