added hyper params dict to checkpoint

--- a/code/train_model.ipynb
+++ b/code/train_model.ipynb
@@ -77,6 +77,7 @@
    "source": [
     "# for building vocab\n",
     "FREQ_THRESHOLD = 5\n",
+    "CAPTIONS_FILE = 'captions_train2017.json'\n",
     "\n",
     "# for data loader\n",
     "BATCH_SIZE = 32\n",
@@ -125,7 +126,8 @@
     "test_captions_path = root/'annotations'/'sports_captions_test.json'\n",
     "\n",
     "#### build vocab using full original coco train\n",
-    "# build_vocab(freq_threshold=FREQ_THRESHOLD)\n",
+    "build_vocab(freq_threshold=FREQ_THRESHOLD,\n",
+    "            captions_file=CAPTIONS_FILE)\n",
     "\n",
     "# load vocab\n",
     "with open('../vocabulary/string_to_index.json') as json_file:\n",
@@ -179,6 +181,30 @@
     "val_dl, val_dataset = get_loader(**val_loader_params)\n",
     "\n",
     "vocab_size = len(train_dataset.word2idx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "678bc463-7410-4bfe-bada-adb3beb89559",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# this is so we can save hyper params in checkpoint for future use\n",
+    "hyper_params = {'vocab': train_dataset.idx2word,\n",
+    "                'vocab_size': len(train_dataset.idx2word),\n",
+    "                'vocab_captions_file': CAPTIONS_FILE,\n",
+    "                'freq_threshold': FREQ_THRESHOLD,\n",
+    "                'train_imgs_size': len(set(d[0] for d in [train_dataset.img_deque])),\n",
+    "                'train_sample_size': len(train_dataset.img_deque),\n",
+    "                'val_imgs_size': len(set(d[0] for d in [val_dataset.img_deque])),\n",
+    "                'val_sample_size': len(val_dataset.img_deque),\n",
+    "                'embed_size': EMBED_SIZE,\n",
+    "                'hidden_size': HIDDEN_SIZE,\n",
+    "                'num_layers': NUM_LAYERS,\n",
+    "                'optimizer_params': OPT_PARAMS,\n",
+    "                'batch_size': BATCH_SIZE\n",
+    "               }"
    ]
   },
   {
@@ -353,7 +379,20 @@
       "######################################################################\n",
       "Step: [0/2344] || Average Training Loss: 2.2475\n",
       "Step: [300/2344] || Average Training Loss: 2.5933\n",
-      "Step: [600/2344] || Average Training Loss: 2.5972\n"
+      "Step: [600/2344] || Average Training Loss: 2.5972\n",
+      "Step: [900/2344] || Average Training Loss: 2.5995\n",
+      "Step: [1200/2344] || Average Training Loss: 2.6031\n",
+      "Step: [1500/2344] || Average Training Loss: 2.6074\n",
+      "Step: [1800/2344] || Average Training Loss: 2.6073\n",
+      "Step: [2100/2344] || Average Training Loss: 2.6092\n",
+      "Step: [0/94] || Average Validation Loss: 2.7401\n",
+      "######################################################################\n",
+      "Epoch: [7/15] || Training Loss = 2.61 || Training Perplexity: 13.59 || Validation Loss: 2.47 || Validation Perplexity: 11.81|| Time: 11.805795\n",
+      "######################################################################\n",
+      "Step: [0/2344] || Average Training Loss: 2.8819\n",
+      "Step: [300/2344] || Average Training Loss: 2.5977\n",
+      "Step: [600/2344] || Average Training Loss: 2.6074\n",
+      "Step: [900/2344] || Average Training Loss: 2.6029\n"
      ]
     }
    ],
