--- a/code/train_model.ipynb
+++ b/code/train_model.ipynb
@@ -195,9 +195,9 @@
     "                'vocab_size': len(train_dataset.idx2word),\n",
     "                'vocab_captions_file': CAPTIONS_FILE,\n",
     "                'freq_threshold': FREQ_THRESHOLD,\n",
-    "                'train_imgs_size': len(set(d[0] for d in [train_dataset.img_deque])),\n",
+    "                'train_imgs_size': len(set([d[0] for d in train_dataset.img_deque])),\n",
     "                'train_sample_size': len(train_dataset.img_deque),\n",
-    "                'val_imgs_size': len(set(d[0] for d in [val_dataset.img_deque])),\n",
+    "                'val_imgs_size': len(set([d[0] for d in val_dataset.img_deque])),\n",
     "                'val_sample_size': len(val_dataset.img_deque),\n",
     "                'embed_size': EMBED_SIZE,\n",
     "                'hidden_size': HIDDEN_SIZE,\n",
@@ -392,7 +392,23 @@
       "Step: [0/2344] || Average Training Loss: 2.8819\n",
       "Step: [300/2344] || Average Training Loss: 2.5977\n",
       "Step: [600/2344] || Average Training Loss: 2.6074\n",
-      "Step: [900/2344] || Average Training Loss: 2.6029\n"
+      "Step: [900/2344] || Average Training Loss: 2.6029\n",
+      "Step: [1200/2344] || Average Training Loss: 2.6054\n",
+      "Step: [1500/2344] || Average Training Loss: 2.6048\n",
+      "Step: [1800/2344] || Average Training Loss: 2.6051\n",
+      "Step: [2100/2344] || Average Training Loss: 2.6067\n",
+      "Step: [0/94] || Average Validation Loss: 2.1073\n",
+      "######################################################################\n",
+      "Epoch: [8/15] || Training Loss = 2.61 || Training Perplexity: 13.57 || Validation Loss: 2.45 || Validation Perplexity: 11.63|| Time: 11.626695\n",
+      "######################################################################\n",
+      "Step: [0/2344] || Average Training Loss: 2.3123\n",
+      "Step: [300/2344] || Average Training Loss: 2.6003\n",
+      "Step: [600/2344] || Average Training Loss: 2.5978\n",
+      "Step: [900/2344] || Average Training Loss: 2.6001\n",
+      "Step: [1200/2344] || Average Training Loss: 2.6061\n",
+      "Step: [1500/2344] || Average Training Loss: 2.6068\n",
+      "Step: [1800/2344] || Average Training Loss: 2.6053\n",
+      "Step: [2100/2344] || Average Training Loss: 2.6049\n"
      ]
     }
    ],
