added pack and unpack to model

--- a/code/train_model.ipynb
+++ b/code/train_model.ipynb
@@ -25,6 +25,9 @@
    },
    "outputs": [],
    "source": [
+    "# faster version of json\n",
+    "# !pip install ujson\n",
+    "\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.utils.data as data\n",
@@ -70,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "e1c984c7-0355-4b17-a4ee-293902fb181a",
    "metadata": {},
    "outputs": [],
@@ -93,7 +96,7 @@
     "\n",
     "# training parameters\n",
     "TOTAL_EPOCH = 15\n",
-    "CHECKPOINT = '../model/image_captioning_model_v9.pth'\n",
+    "CHECKPOINT = '../model/image_captioning_model_v10.pth'\n",
     "PRINT_EVERY = 300 # run print_every batches and then\n",
     "# print running results. For bigger batch size make this \n",
     "# number smaller if you want to see regular output"
@@ -109,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "6d1b68b6-e95a-45d7-97d1-df98d456535d",
    "metadata": {},
    "outputs": [],
@@ -118,16 +121,16 @@
     "imgs_path = root/'images'/'train2017'\n",
     "imgs_path_test = root/'images'/'val2017'\n",
     "\n",
-    "# prepare_datasets(train_percent = 0.87, super_categories=['sports'],\n",
-    "#                     max_train=15000, max_val=3000, max_test=3000)\n",
+    "prepare_datasets(train_percent = 0.87, super_categories=None,\n",
+    "                    max_train=45000, max_val=15000, max_test=5000)\n",
     "\n",
-    "train_captions_path = root/'annotations'/'sports_captions_train.json'\n",
-    "val_captions_path = root/'annotations'/'sports_captions_val.json'\n",
-    "test_captions_path = root/'annotations'/'sports_captions_test.json'\n",
+    "train_captions_path = root/'annotations'/'custom_captions_train.json'\n",
+    "val_captions_path = root/'annotations'/'custom_captions_val.json'\n",
+    "test_captions_path = root/'annotations'/'custom_captions_test.json'\n",
     "\n",
     "#### build vocab using full original coco train\n",
-    "build_vocab(freq_threshold=FREQ_THRESHOLD,\n",
-    "            captions_file=CAPTIONS_FILE)\n",
+    "# build_vocab(freq_threshold=FREQ_THRESHOLD,\n",
+    "#             captions_file=CAPTIONS_FILE)\n",
     "\n",
     "# load vocab\n",
     "with open('../vocabulary/string_to_index.json') as json_file:\n",
@@ -136,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "644a4dc6-0e99-4b86-b2bf-2d376f2f09e7",
    "metadata": {},
    "outputs": [],
@@ -148,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "1f8baa40-b22f-4c9d-a445-c311eb3c190b",
    "metadata": {},
    "outputs": [],
@@ -217,12 +220,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "b7e8a532-f6f7-42ff-840f-c5655e79c874",
    "metadata": {},
    "outputs": [],
    "source": [
-    "encoder = Encoder(embed_size=EMBED_SIZE, pretrained=True, model_weight_path=\"../model/resnet152_model.pth\")\n",
+    "encoder = Encoder(embed_size=EMBED_SIZE, pretrained=False, model_weight_path=\"../model/resnet152_model.pth\")\n",
     "decoder = Decoder(embed_size=EMBED_SIZE, hidden_size=HIDDEN_SIZE, vocab_size=vocab_size, num_layers=NUM_LAYERS)"
    ]
   },
@@ -236,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "d48931ad-e9a8-4572-af11-0463772d6270",
    "metadata": {},
    "outputs": [],
@@ -262,13 +265,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "d42d3799-d7cf-4356-b74b-872123d114a5",
    "metadata": {},
    "outputs": [],
    "source": [
     "if Path(CHECKPOINT).exists():\n",
-    "    encoder, decoder, training_loss, validation_loss = load_model(encoder, decoder, CHECKPOINT)\n",
+    "    encoder, decoder, training_loss, validation_loss, hyper_params = load_model(encoder, decoder, CHECKPOINT)\n",
     "else:\n",
     "    print(f'{CHECKPOINT} file does not exist, training startging from scratch')\n",
     "    training_loss = None\n",
@@ -288,130 +291,7 @@
    "execution_count": null,
    "id": "e270b0f5-fe3c-4137-be4a-da8b85a575c1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Step: [0/2344] || Average Training Loss: 2.9743\n",
-      "Step: [300/2344] || Average Training Loss: 2.7166\n",
-      "Step: [600/2344] || Average Training Loss: 2.6994\n",
-      "Step: [900/2344] || Average Training Loss: 2.6813\n",
-      "Step: [1200/2344] || Average Training Loss: 2.6757\n",
-      "Step: [1500/2344] || Average Training Loss: 2.6719\n",
-      "Step: [1800/2344] || Average Training Loss: 2.6694\n",
-      "Step: [2100/2344] || Average Training Loss: 2.6685\n",
-      "Step: [0/94] || Average Validation Loss: 2.6069\n",
-      "######################################################################\n",
-      "Epoch: [0/15] || Training Loss = 2.66 || Training Perplexity: 14.36 || Validation Loss: 2.49 || Validation Perplexity: 12.04|| Time: 12.039838\n",
-      "######################################################################\n",
-      "Step: [0/2344] || Average Training Loss: 2.3694\n",
-      "Step: [300/2344] || Average Training Loss: 2.6512\n",
-      "Step: [600/2344] || Average Training Loss: 2.6415\n",
-      "Step: [900/2344] || Average Training Loss: 2.6379\n",
-      "Step: [1200/2344] || Average Training Loss: 2.6430\n",
-      "Step: [1500/2344] || Average Training Loss: 2.6421\n",
-      "Step: [1800/2344] || Average Training Loss: 2.6415\n",
-      "Step: [2100/2344] || Average Training Loss: 2.6410\n",
-      "Step: [0/94] || Average Validation Loss: 2.1527\n",
-      "######################################################################\n",
-      "Epoch: [1/15] || Training Loss = 2.64 || Training Perplexity: 13.99 || Validation Loss: 2.49 || Validation Perplexity: 12.01|| Time: 12.011737\n",
-      "######################################################################\n",
-      "Step: [0/2344] || Average Training Loss: 2.5006\n",
-      "Step: [300/2344] || Average Training Loss: 2.6367\n",
-      "Step: [600/2344] || Average Training Loss: 2.6391\n",
-      "Step: [900/2344] || Average Training Loss: 2.6354\n",
-      "Step: [1200/2344] || Average Training Loss: 2.6351\n",
-      "Step: [1500/2344] || Average Training Loss: 2.6346\n",
-      "Step: [1800/2344] || Average Training Loss: 2.6330\n",
-      "Step: [2100/2344] || Average Training Loss: 2.6297\n",
-      "Step: [0/94] || Average Validation Loss: 2.4109\n",
-      "######################################################################\n",
-      "Epoch: [2/15] || Training Loss = 2.63 || Training Perplexity: 13.92 || Validation Loss: 2.50 || Validation Perplexity: 12.20|| Time: 12.201837\n",
-      "######################################################################\n",
-      "Step: [0/2344] || Average Training Loss: 2.7833\n",
-      "Step: [300/2344] || Average Training Loss: 2.6084\n",
-      "Step: [600/2344] || Average Training Loss: 2.6128\n",
-      "Step: [900/2344] || Average Training Loss: 2.6185\n",
-      "Step: [1200/2344] || Average Training Loss: 2.6230\n",
-      "Step: [1500/2344] || Average Training Loss: 2.6233\n",
-      "Step: [1800/2344] || Average Training Loss: 2.6225\n",
-      "Step: [2100/2344] || Average Training Loss: 2.6229\n",
-      "Step: [0/94] || Average Validation Loss: 2.2965\n",
-      "######################################################################\n",
-      "Epoch: [3/15] || Training Loss = 2.62 || Training Perplexity: 13.79 || Validation Loss: 2.48 || Validation Perplexity: 11.95|| Time: 11.949195\n",
-      "######################################################################\n",
-      "Step: [0/2344] || Average Training Loss: 2.7292\n",
-      "Step: [300/2344] || Average Training Loss: 2.6036\n",
-      "Step: [600/2344] || Average Training Loss: 2.6089\n",
-      "Step: [900/2344] || Average Training Loss: 2.6115\n",
-      "Step: [1200/2344] || Average Training Loss: 2.6137\n",
-      "Step: [1500/2344] || Average Training Loss: 2.6168\n",
-      "Step: [1800/2344] || Average Training Loss: 2.6156\n",
-      "Step: [2100/2344] || Average Training Loss: 2.6164\n",
-      "Step: [0/94] || Average Validation Loss: 2.4784\n",
-      "######################################################################\n",
-      "Epoch: [4/15] || Training Loss = 2.62 || Training Perplexity: 13.71 || Validation Loss: 2.47 || Validation Perplexity: 11.84|| Time: 11.835285\n",
-      "######################################################################\n",
-      "Step: [0/2344] || Average Training Loss: 2.4823\n",
-      "Step: [300/2344] || Average Training Loss: 2.6014\n",
-      "Step: [600/2344] || Average Training Loss: 2.6089\n",
-      "Step: [900/2344] || Average Training Loss: 2.6098\n",
-      "Step: [1200/2344] || Average Training Loss: 2.6142\n",
-      "Step: [1500/2344] || Average Training Loss: 2.6144\n",
-      "Step: [1800/2344] || Average Training Loss: 2.6158\n",
-      "Step: [2100/2344] || Average Training Loss: 2.6163\n",
-      "Step: [0/94] || Average Validation Loss: 2.5006\n",
-      "######################################################################\n",
-      "Epoch: [5/15] || Training Loss = 2.62 || Training Perplexity: 13.67 || Validation Loss: 2.48 || Validation Perplexity: 11.93|| Time: 11.931040\n",
-      "######################################################################\n",
-      "Step: [0/2344] || Average Training Loss: 2.4346\n",
-      "Step: [300/2344] || Average Training Loss: 2.6066\n",
-      "Step: [600/2344] || Average Training Loss: 2.6081\n",
-      "Step: [900/2344] || Average Training Loss: 2.6106\n",
-      "Step: [1200/2344] || Average Training Loss: 2.6125\n",
-      "Step: [1500/2344] || Average Training Loss: 2.6109\n",
-      "Step: [1800/2344] || Average Training Loss: 2.6111\n",
-      "Step: [2100/2344] || Average Training Loss: 2.6126\n",
-      "Step: [0/94] || Average Validation Loss: 2.3292\n",
-      "######################################################################\n",
-      "Epoch: [6/15] || Training Loss = 2.61 || Training Perplexity: 13.63 || Validation Loss: 2.48 || Validation Perplexity: 11.94|| Time: 11.944505\n",
-      "######################################################################\n",
-      "Step: [0/2344] || Average Training Loss: 2.2475\n",
-      "Step: [300/2344] || Average Training Loss: 2.5933\n",
-      "Step: [600/2344] || Average Training Loss: 2.5972\n",
-      "Step: [900/2344] || Average Training Loss: 2.5995\n",
-      "Step: [1200/2344] || Average Training Loss: 2.6031\n",
-      "Step: [1500/2344] || Average Training Loss: 2.6074\n",
-      "Step: [1800/2344] || Average Training Loss: 2.6073\n",
-      "Step: [2100/2344] || Average Training Loss: 2.6092\n",
-      "Step: [0/94] || Average Validation Loss: 2.7401\n",
-      "######################################################################\n",
-      "Epoch: [7/15] || Training Loss = 2.61 || Training Perplexity: 13.59 || Validation Loss: 2.47 || Validation Perplexity: 11.81|| Time: 11.805795\n",
-      "######################################################################\n",
-      "Step: [0/2344] || Average Training Loss: 2.8819\n",
-      "Step: [300/2344] || Average Training Loss: 2.5977\n",
-      "Step: [600/2344] || Average Training Loss: 2.6074\n",
-      "Step: [900/2344] || Average Training Loss: 2.6029\n",
-      "Step: [1200/2344] || Average Training Loss: 2.6054\n",
-      "Step: [1500/2344] || Average Training Loss: 2.6048\n",
-      "Step: [1800/2344] || Average Training Loss: 2.6051\n",
-      "Step: [2100/2344] || Average Training Loss: 2.6067\n",
-      "Step: [0/94] || Average Validation Loss: 2.1073\n",
-      "######################################################################\n",
-      "Epoch: [8/15] || Training Loss = 2.61 || Training Perplexity: 13.57 || Validation Loss: 2.45 || Validation Perplexity: 11.63|| Time: 11.626695\n",
-      "######################################################################\n",
-      "Step: [0/2344] || Average Training Loss: 2.3123\n",
-      "Step: [300/2344] || Average Training Loss: 2.6003\n",
-      "Step: [600/2344] || Average Training Loss: 2.5978\n",
-      "Step: [900/2344] || Average Training Loss: 2.6001\n",
-      "Step: [1200/2344] || Average Training Loss: 2.6061\n",
-      "Step: [1500/2344] || Average Training Loss: 2.6068\n",
-      "Step: [1800/2344] || Average Training Loss: 2.6053\n",
-      "Step: [2100/2344] || Average Training Loss: 2.6049\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_params = {\n",
     "    'device': device,\n",
@@ -435,6 +315,48 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1aadc3e6-a77e-4662-8f42-12e0258e77f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch = next(iter(train_dl))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "faa66fde-7aae-4246-a2be-da634d9925e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for b in batch:\n",
+    "    print(type(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3188f79a-904e-4443-a8db-4f41f6d9c3d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "capts = [1,2,3,4,5]\n",
+    "torch.Tensor(capts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98ae6c7a-fefd-4429-ac9f-df81eacd62ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.cat?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c3c15b8-b3ba-4cf3-a255-fafe0af0e86a",
    "metadata": {},
    "outputs": [],
    "source": []
